# MicroSpot-Beta

./: README.md  Section_3_value_iteration_complete.ipynb
beta_microspot/: CMakeLists.txt  package.xml
beta_microspot/launch/: controller.launch.xml
beta_microspot/scripts/: action.py  action_2.py  action_3.py  double_walking_gait.py  gait_parameters.py  input_detector.py  inverse_kinematics.py  main_controller.py  trajectory_planner.py  trot_gait.py  walking_gait.py
beta_microspot_sim/: CMakeLists.txt  package.xml
beta_microspot_sim/description/: beta_microspot.gazebo.xacro  spot_micro.urdf.xacro
beta_microspot_sim/launch/: microspot.launch.xml  rsp.launch.py
beta_microspot_sim/rviz/: microspot.rviz
